[package]
name = "fedimint-proof"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-proof is a fedimint module"
license = "MIT"

[lib]
name = "fedimint_proof"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
bitcoin = { version = "0.29.2", features = [ "rand", "serde"] }
futures = "0.3"
fedimint-api = { path = "../../fedimint-api" }
fedimint-wallet = { path = "../fedimint-wallet" }
rand = "0.8"
rayon = "1.6.1"
secp256k1 = { version = "0.24.2", features = [ "serde" ] }
serde = { version = "1.0.149", features = [ "derive" ] }
strum = "0.24"
strum_macros = "0.24"
impl-tools = "0.6.1"
thiserror = "1.0.37"
tracing ="0.1.37"
